# gptokeyb

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: config.cpp  gptokeyb.cpp  gptokeyb.h  input.cpp  keyboard.cpp  output_uinput.cpp  output_x11.cpp  structs.h  util.cpp  x11_defines.h  xbox360.cpp
